# state-of-digitization

./: .gitignore  Makefile  README.md  app.Containerfile
app/: Makefile  app.py  config.py  requirements.txt  router.py  schemas.py
client/: client.py  client.py.bak  package-lock.json  package.json  requirements.txt  run.sh
client/i18n/: cs.json
client/src/: App.tsx  i18n.ts  index.html  index.tsx
client/src/public/locales/cs/: translation.json
client_old/: Containerfile  Makefile  requirements.txt
client_old/i18n/: cs.json
lib/: Makefile  pyproject.toml  requirements.txt
lib/sod/: __init__.py  __main__.py  defaults.py  kramerius_registry.py  libids.py  rdcz_registry.py  registry.py  scoring.py
lib/sod/custom_types/: __init__.py  digitization_state.py  registry_type.py  scoring.py
lib/sod/registries/: __init__.py  _solr.py  interface.py  kramerius.py  rdcz.py  scoring.py
lib/sod/schemas/: __init__.py  config.py  document.py  scoring.py
lib/tests/: test_kramerius_search.py  test_lib_id_parsing.py  test_rdcz_search.py  test_sod_registry.py
