[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sod"
version = "0.0.1"
authors = [
    {name = "Robert Randiak", email = "randiak@protonmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "Levenshtein",
    "kramerius @ git+https://github.com/moravianlibrary/kramerius-client.git",
    "marcdantic @ git+https://github.com/moravianlibrary/marcdantic.git",
    "numpy",
    "pydantic",
    "rdcz @ git+https://github.com/moravianlibrary/rdcz-client.git",
    "requests",
    "scipy",
    "solrify @ git+https://github.com/moravianlibrary/solrify.git"
]
dynamic = ["description", "readme"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sod*"]

[tool.setuptools.dynamic]
description = {file = "description.txt"}
readme = {file = "README.md"}
